[package]
name = "rustv"
version = "0.1.0"
authors = ["dobkeratops <dobkeratopsgit@gmail.com>"]

[dependencies]
image = "0.18.0"
itertools = "0.7.4"
half = "1.0.1"
array3d = { git = "file:///Users/walter/rust_projects/array3d"}
vecgenericindex = "0.1.0"
lininterp = { git = "file:///Users/walter/rust_projects/lininterp"}
